# sigenergy2mqtt

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  auto-discovery.yaml  final_pytest_output.txt  pyproject.toml  pytest_full_output.txt  sigenergy2mqtt.yaml  uid_disco.discovery.json
.agent/rules/: env.md
.github/: dependabot.yaml  stale.yml
.github/scripts/: publish-pypi-get-version.py
.github/workflows/: coverage.yaml  publish-docker.yml  publish-pypi.yml  python-publish.yml  stale.yml
doc/: sigenergy2mqtt.yaml
resources/: README.md  sigenergy2mqtt.yaml  update_md.py
resources/configuration/: CLI.md  ENV.md  FILE.md  INFLUXDB.md  README.md  sigenergy2mqtt.schema.yaml  sigenergy2mqtt.yaml
resources/docker/: README.md  docker-compose.yaml
resources/home-assistant/: README.md
resources/homeassistant/: README.md  const.py
resources/linux/: README.md  sigenergy2mqtt.service
resources/sensors/: SENSORS.md  TOPICS.md
scripts/: .translation_cache.json  README.md  analyze_coverage.py  build  build-modbus-test-server-docker-image  dependencies  docker-test  find_untranslated_values.py  generate_tests.py  release  sort_yaml.py  translate_missing.py  translations  update_en_transalation.py  update_en_translation.py  update_md  update_md.py  verify_translations.py  yaml_to_env.py
sigenergy2mqtt/: __init__.py  __main__.py  i18n.py
sigenergy2mqtt/common/: __init__.py  const.py  consumption_method.py  consumption_source.py  days.py  device_class.py  firmware_version.py  health.py  input_type.py  output_field.py  protocol.py  register_access.py  scan_interval_default.py  state_class.py  status_field.py  tariff.py  tariff_type.py  time_period.py  types.py  units.py  voltage_source.py
sigenergy2mqtt/config/: __init__.py  auto_discovery.py  auto_discovery_settings.py  cli.py  coerce.py  config.py  const.py  device_config.py  home_assistant_config.py  influxdb_config.py  merge.py  modbus_config.py  mqtt_config.py  protocol.py  pvoutput_config.py  settings.py  smart_port_config.py  sources.py  validation.py  validators.py  version.py
sigenergy2mqtt/devices/: __init__.py  ac_charger.py  dc_charger.py  device.py  grid_code.py  grid_sensor.py  inverter.py  inverter_ess.py  inverter_pv_string.py  pid.py  plant.py  plant_statistics.py  pss.py  types.py
sigenergy2mqtt/influxdb/: __init__.py  hass_history_sync.py  influx_base.py  influx_service.py  service.py
sigenergy2mqtt/locales/: de.yaml  en.yaml  es.yaml  fr.yaml  it.yaml  ja.yaml  ko.yaml  nl.yaml  pt.yaml  zh.yaml
sigenergy2mqtt/main/: __init__.py  device_thread.py  main.py  restart.py  thread_config.py  threading.py
sigenergy2mqtt/metrics/: __init__.py  metrics.py  metrics_sensors.py  metrics_service.py
sigenergy2mqtt/modbus/: __init__.py  client.py  client_factory.py  custom_lock.py  lock.py  lock_factory.py  read_ahead.py  types.py
sigenergy2mqtt/monitor/: __init__.py  monitor_service.py  monitored_sensor.py
sigenergy2mqtt/mqtt/: __init__.py  client.py  handler.py  mqtt.py  registry.py
sigenergy2mqtt/persistence/: __init__.py  state_store.py
sigenergy2mqtt/pvoutput/: __init__.py  output.py  service.py  service_topics.py  status.py  topic.py
sigenergy2mqtt/sensors/: README.md  __update_readme.py  ac_charger_read_only.py  ac_charger_read_write.py  base.py  const.py  inverter_derived.py  inverter_read_only.py  inverter_read_write.py  pid_read_only.py  pid_read_write.py  plant_derived.py  plant_ess_preheating_read_write.py  plant_read_only.py  plant_read_write.py  pss_read_only.py  pss_read_write.py  sanity_check.py
sigenergy2mqtt/translations/: de.yaml  en.yaml  es.yaml  fr.yaml  it.yaml  ja.yaml  ko.yaml  nl.yaml  pt.yaml  zh-Hans.yaml  zh.yaml
test/: __init__.py  docker-test.bash  instances.py  modbus_test_server.py  read_single_register.py
tests/: README.md  conftest.py
tests/integration/: conftest.py  test_auto_discovery.py  test_grid_outage_startup_restart.py  test_influx_e2e.py  test_influx_integration.py  test_modbus.py  test_modbus_read_ahead.py  (+2 more)
(+320 files in other folders)
