[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigenergy2mqtt"
dynamic = ["version"]
dependencies = [
    "paho-mqtt==2.1.0",
    "psutil==7.1.0",
    "pymodbus==3.11.3",
    "requests==2.32.5",
    "ruamel.yaml==0.18.15",
    "scapy==2.6.1",
]
description = "Publish Modbus data from Sigenergy to MQTT, with optional Home Assistant Auto-Discovery and PVOutput updating"
authors = [
    { name = "seud0nym", email = "seud0nym@yahoo.com.au" }
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
sigenergy2mqtt = "sigenergy2mqtt.__main__:main"

[project.urls]
repository = "https://github.com/seud0nym/sigenergy2mqtt"
issues = "https://github.com/seud0nym/sigenergy2mqtt/issues"

[tool.hatch.version]
path = "sigenergy2mqtt/config/version.py"

[tool.hatch.build.targets.sdist]
include = ["sigenergy2mqtt/**"]

[tool.hatch.build.targets.wheel]
include = ["sigenergy2mqtt/**"]
