[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{ name = "seud0nym", email = "seud0nym@yahoo.com.au" }]
dependencies = [
    "paho-mqtt==2.1.0",
    "psutil==7.2.2",
    "pydantic-settings==2.13.1",
    "pymodbus==3.12.1",
    "requests==2.33.1",
    "ruamel.yaml==0.19.1",
]
description = "Publish Modbus data from Sigenergy to MQTT, with optional Home Assistant Auto-Discovery and PVOutput updating"
dynamic = ["version"]
license = "MIT"
license-files = ["LICEN[CS]E*"]
name = "sigenergy2mqtt"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
test = ["jsonschema", "pytest", "pytest-asyncio", "pytest-cov", "pytest-xdist"]

[project.scripts]
sigenergy2mqtt = "sigenergy2mqtt.__main__:main"

[project.urls]
issues = "https://github.com/seud0nym/sigenergy2mqtt/issues"
repository = "https://github.com/seud0nym/sigenergy2mqtt"

[tool.hatch.build.targets.sdist]
include = ["sigenergy2mqtt/**"]

[tool.hatch.build.targets.wheel]
include = ["sigenergy2mqtt/**"]

[tool.hatch.envs.default]
features = ["test"]
scripts.cov = "pytest -n auto --cov=sigenergy2mqtt --cov-report=xml --maxfail=0"

[tool.hatch.version]
path = "sigenergy2mqtt/config/version.py"

[tool.pyrefly]
project-excludes = [".git", ".venv", "tests"]

[tool.pyright]
exclude = [".git", ".venv", "tests"]
extraPaths = ["./sigenergy2mqtt"]
ignore = [".git", ".venv", "tests"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
addopts = "--dist loadscope"
asyncio_mode = "auto"
markers = [
    "integration: mark a test as an integration test",
    "no_language_mock: disable global mock of i18n.get_default_language",
    "no_persistent_state_mock: disable global mock of Config.persistent_state_path",
]
testpaths = ["tests"]
